deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pascal-riesinger-de
  namespace: pascal
  labels:
    app: pascal-riesinger-de
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pascal-riesinger-de
  template:
    metadata:
      labels:
        app: pascal-riesinger-de
    spec:
      containers:
      - name: pascal-riesinger-de
        image: registry.glidingthrough.space/pascal-riesinger.de:v0.1.4
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: regcred
